restore main.py to use Tsantekidis et al. model

--- a/main.ipynb
+++ b/main.ipynb
@@ -147,7 +147,7 @@
     "from lob_datasets import LobDataset, TheirDataset\n",
     "from lob_models_1d import Lob1dCNN, ResBlock1d\n",
     "from lob_models_2d import TheirDeepLob, Lob2dCNN\n",
-    "from lightning_model import LobLightningModule"
+    "from lightning_model import LobLightningModule\n"
    ]
   },
   {
@@ -354,9 +354,9 @@
     "# test_dataset = LobDataset(data=dec_test, k=4, num_classes=3, T=100)\n",
     "\n",
     "dataset_kwargs = {\n",
-    "    'window_len':100,\n",
-    "    'window_skip': 2,\n",
-    "    'data_fmt': '2d', # or '2d' if using 2d cnns\n",
+    "    \"window_len\": 100,\n",
+    "    \"window_skip\": 2,\n",
+    "    \"data_fmt\": \"1d\",  # or '2d' if using 2d cnns\n",
     "}\n",
     "\n",
     "train_dataset = dataset = LobDataset(x_training_data, y_training_data, **dataset_kwargs)\n",
@@ -381,7 +381,9 @@
    "cell_type": "code",
    "execution_count": 13,
    "id": "13d09f70",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -398,7 +400,8 @@
     "# their_elem = their_dataset[0]\n",
     "# their_seq, their_labels = their_elem\n",
     "(\n",
-    "    seq.shape, labels.shape, \n",
+    "    seq.shape,\n",
+    "    labels.shape,\n",
     "    # their_seq.shape, their_labels.shape\n",
     ")"
    ]
@@ -419,7 +422,9 @@
   {
    "cell_type": "markdown",
    "id": "02fd48ad-43b6-4fab-978e-5014528acfbe",
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "source": [
     "### The `ShuffleDatasetIndices` callback\n",
     "\n",
@@ -467,8 +472,7 @@
     "logger = pl.loggers.WandbLogger(project=\"ai4t-DeepLobster\")\n",
     "callbacks = [\n",
     "    ShuffleDatasetIndices(),\n",
-    "    pl.callbacks.EarlyStopping(monitor='val/loss', patience=15),\n",
-    "    \n",
+    "    pl.callbacks.EarlyStopping(monitor=\"val/loss\", patience=5),\n",
     "]"
    ]
   },
@@ -502,12 +506,14 @@
    "source": [
     "BATCH_SIZE = 64\n",
     "\n",
-    "#their_cnn = TheirDeepLob(dropout=0.5)\n",
+    "# DeepLOB (Zhang et al.)\n",
+    "# cnn = TheirDeepLob(dropout=0.5)\n",
+    "# (Tsantekidis et al. model)\n",
+    "cnn = Lob2dCNN(dropout=0.1)\n",
+    "# 1d model from me (not very good performance)\n",
+    "# cnn = Lob1dCNN(dropout=0.1)\n",
     "\n",
-    "my_cnn = Lob2dCNN(dropout=0.1)\n",
-    "\n",
-    "cnn = my_cnn\n",
-    "optimizer = torch.optim.Adam(cnn.parameters(), lr=4e-3)\n",
+    "optimizer = torch.optim.Adam(cnn.parameters(), lr=1e-3)\n",
     "\n",
     "\n",
     "model = LobLightningModule(\n",
@@ -516,7 +522,7 @@
     "    train_dataset=train_dataset,\n",
     "    val_dataset=val_dataset,\n",
     "    test_dataset=test_dataset,\n",
-    "    batch_size = BATCH_SIZE,\n",
+    "    batch_size=BATCH_SIZE,\n",
     "    # loss_criterion=DynamicWeightCrossEntropy(n_classes=3, decay=0.9, minimum_weight=0.01),\n",
     ")\n",
     "\n",
@@ -1394,9 +1400,9 @@
     "try:\n",
     "    trainer.fit(model)\n",
     "except KeyboardInterrupt:\n",
-    "    print('interrupting training....')\n",
+    "    print(\"interrupting training....\")\n",
     "finally:\n",
-    "    test_result = trainer.test()\n",
+    "    test_result = trainer.test(ckpt_path=\"best\")\n",
     "    print(test_result)\n",
     "    logger.experiment.finish()"
    ]
@@ -1413,11 +1419,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "id": "3ff6b01a-ad73-4ba0-9ea9-0290b2a5da05",
+   "cell_type": "markdown",
+   "id": "678f5d87",
    "metadata": {},
-   "outputs": [],
    "source": [
     "model.loss.weight"
    ]
